Fixed UI layout.
Canvas in index.html was not centered properly.  Removed tabs container as it wasn't needed.

--- a/css/view/profiler-main.css
+++ b/css/view/profiler-main.css
@@ -1,14 +1,26 @@
 
 body{overflow:hidden;}
 
-#c{border-style:solid;}
+#c{
+  text-align:center;
+  }
+
 #glcanvas{border:none;}
 
-.sb-pos-input{
-  width:30px;
+
+/* .sb-pos-input{ */
+/*   width:30px; */
+/* } */
+
+#tabsX {
+  margin-top:20px;
+  text-align:center;
+  width:1400;
 }
 
+
 #left_col {
+   margin-left:100px;
    float:left;
    width:200px;
 }
@@ -20,6 +32,7 @@ body{overflow:hidden;}
 }
 
 #left_sub_col {
+   padding-left:80px;
    float:left;
    width:150px;
 }
@@ -31,6 +44,14 @@ body{overflow:hidden;}
 
 button {
  margin:10px;
+}
+
+h3 {
+  font-family:calibri,arial;
+}
+
+p {
+  font-family:calibri,arial;
 }
 
 /****Jquery UI*****/
